--- a/2023-07-12t13-47-41z.md
+++ b/2023-07-12t13-47-41z.md
@@ -5,7 +5,7 @@ id: 2023-07-12t13-47-41z
 tags: [msc_thesis]
 ---
 
-When using precomputed CLIP embeddings, training of
+When using [precomputed CLIP embeddings](./2023-07-13t00-50-10z.md), training of
 [CLIPT](./2023-07-10t16-36-37z.md) and [CCLIPT](./2023-07-11t11-38-00z.md) is
 actually very rapid, since we are only fine-tuning small MLP heads.
 
