--- a/2023-07-13t00-50-10z.md
+++ b/2023-07-13t00-50-10z.md
@@ -5,7 +5,7 @@ id: 2023-07-13t00-50-10z
 tags: [msc_thesis]
 ---
 
-Since in [CLIPT](.2023-07-10t16-36-37z.md) we keep CLIP frozen and only
+Since in [CLIPT](./2023-07-10t16-36-37z.md) we keep CLIP frozen and only
 fine-tune the MLP heads, we can pre-compute the CLIP embeddings for the input
 images and text once, and read those directly in successive runs, avoiding
 having to even run any forward through CLIP itself.
