--- a/2020-09-04t13-53-54z.md
+++ b/2020-09-04t13-53-54z.md
@@ -9,7 +9,7 @@ Nowadays, the more common approach for problems dealing with sequences (text,
 world is to utilize some variants of [RNNs](./2020-09-04t13-57-25z.md)
 
 However this is not strictly necessary. In
-[@agrawalMachineLearningPrecipitation2019], the authors utilize adjacent
+[@agrawal_machine_2019], the authors utilize adjacent
 channels in the input to pass information from adjacent steps for
 [time series forecasting of rain](./2020-08-30t15-46-28z.md). Essentially, they
 simply add a separate dimension to the input tensor for handling time.
