update gcbc_cclipt journal entry

--- a/2023-07-13t17-03-51z.md
+++ b/2023-07-13t17-03-51z.md
@@ -5,24 +5,98 @@ id: 2023-07-13t17-03-51z
 tags: [msc_thesis]
 ---
 
+NOTE: NEED TO UPDATE THIS WITH NINTH CHECKPOINT NOTE: NEED TO TRAIN FOR 10
+EPOCHS AND UPDATE THIS
+
 Having [fully trained](./2023-07-12t13-47-41z.md)
 [CCLIPT](./2023-07-11t11-38-00z.md), and seeing promising results from
 [GCBC evaluations with preliminary versions of CCLIPT](./2023-07-11t11-38-00z.md),
 we now re-train and re-evaluate [GCBC](./2023-07-11t10-17-09z.md) with this
 CCLIPT backend.
 
-We imagine that this will help with overall performance, but will not
-necessarily address the
-[suggestive start states problem](./2023-07-11t12-12-49z.md)
+We imagine that this will help with overall performance and
+[gap issue](./2023-07-11t11-38-00z.md), but will not necessarily address the
+[suggestive start states problem](./2023-07-11t12-12-49z.md).
 
-Below we find the evaluation results with suggestive start states:
+Below we find the evaluation results with suggestive start states, at the
+various checkpoints:
 
-<!-- TODO -->
+## Third checkpoint (1.5 epochs)
 
-![gcbc_cclipt_sug_start](./images/gcbc_cclipt_full_sug_start.png)
+![gcbc_cclipt_sug_start](./images/gcbc_cclipt_full_sug_start_third.png)
+
+|       | Textual Success Rate | Visual Success Rate |
+| ----- | -------------------- | ------------------- |
+| count | 34.000000            | 34.000000           |
+| mean  | 0.283824             | 0.253529            |
+| std   | 0.252659             | 0.230084            |
+| min   | 0.040000             | 0.010000            |
+| 25%   | 0.102500             | 0.090000            |
+| 50%   | 0.150000             | 0.145000            |
+| 75%   | 0.447500             | 0.400000            |
+| max   | 0.920000             | 0.82000             |
 
 And without suggestive start states
 
-<!-- TODO -->
+![gcbc cclipt non sug start](./images/gcbc_cclipt_full_non_sug_start_third.png)
 
-![gcbc cclipt non sug start](./images/gcbc_cclipt_full_non_sug_start.png)
+|       | Textual Success Rate | Visual Success Rate |
+| ----- | -------------------- | ------------------- |
+| count | 34.000000            | 34.000000           |
+| mean  | 0.124706             | 0.131765            |
+| std   | 0.226398             | 0.215399            |
+| min   | 0.000000             | 0.000000            |
+| 25%   | 0.000000             | 0.002500            |
+| 50%   | 0.040000             | 0.035000            |
+| 75%   | 0.102500             | 0.107500            |
+| max   | 0.960000             | 0.780000            |
+
+We see that the average visual performance is lower than
+[GCBC trained with normal CLIPT](./2023-07-11t11-24-40z.md), and lower in terms
+of both visual and textual performance when compared to the
+[GCBC trained with frozen vision FT CCLIPT](./2023-07-11t11-38-00z.md).
+
+That being said, these are curves from the third checkpoint, and we have not yet
+evaluated the later checkpoints, which will hopefully improve overall
+performance.
+
+The gap is mostly solved, and if anything textual performance is higher.
+
+Finally, we note that some tasks appear to be much easier for the model than
+others. It is unclear if this is an instance of mode collapse, under-training or
+that the tasks are actually harder.
+
+## Ninth checkpoint (4.5 epochs)
+
+![gcbc_cclipt_sug_start ninth](./images/gcbc_cclipt_full_sug_start_ninth.png)
+
+|       | Textual Success Rate | Visual Success Rate |
+| ----- | -------------------- | ------------------- |
+| count | 34.000000            | 34.000000           |
+| mean  | 0.318529             | 0.297647            |
+| std   | 0.246898             | 0.240392            |
+| min   | 0.030000             | 0.030000            |
+| 25%   | 0.160000             | 0.130000            |
+| 50%   | 0.190000             | 0.180000            |
+| 75%   | 0.455000             | 0.470000            |
+| max   | 0.890000             | 0.870000            |
+
+![gcbc cclipt non sug start ninth](./images/gcbc_cclipt_full_non_sug_start_ninth.png)
+
+|       | Textual Success Rate | Visual Success Rate |
+| ----- | -------------------- | ------------------- |
+| count | 34.000000            | 34.000000           |
+| mean  | 0.162941             | 0.152059            |
+| std   | 0.269596             | 0.231383            |
+| min   | 0.000000             | 0.000000            |
+| 25%   | 0.002500             | 0.010000            |
+| 50%   | 0.030000             | 0.030000            |
+| 75%   | 0.222500             | 0.190000            |
+| max   | 0.950000             | 0.740000            |
+
+Performance has improved, but only by a little bit. Worryingly the suggestive
+start state problem does seem to benefit much from additional training.
+
+## Final checkpoint (10 epochs)
+
+TODO
