--- a/2023-07-10t18-45-27z.md
+++ b/2023-07-10t18-45-27z.md
@@ -1,7 +1,6 @@
 ---
 date: 2023-07-10 18:45:27
-title:
-  "Sanity Check: Extrinsically evaluating CLIPT embeddings with Task
+title: "Sanity Check: Extrinsically evaluating CLIPT embeddings with Task
   Classification"
 id: 2023-07-10t18-45-27z
 tags: [msc_thesis]
