--- a/2023-07-11t12-32-21z.md
+++ b/2023-07-11t12-32-21z.md
@@ -1,7 +1,6 @@
 ---
 date: 2023-07-11 12:32:21
-title:
-  Is CCLIPT just relying on the shared context between textual and visual
+title: Is CCLIPT just relying on the shared context between textual and visual
   trajectories?
 id: 2023-07-11t12-32-21z
 tags: [msc_thesis]
