Add reminders about evaluating and training GCBC Roll traj more

--- a/2023-07-13t22-55-21z.md
+++ b/2023-07-13t22-55-21z.md
@@ -30,9 +30,11 @@ and profiling in my [MSc thesis](./2023-07-10t14-32-02z.md). Runtimes are
   task_D_D [[CALVIN]] dataset, including the saving process. Most of this is for
   the images, since these dominate the dataset.
 - [GCBC Evaluation](./2023-07-11t10-52-26z.md) without rolling trajectories
-  takes roughly 5 hours. _With_ rolling trajectories it takes 13 hours at best
+  takes roughly 5 hours. _With_ rolling trajectories it takes ~36 hours at best
   and _much_ more at worse.
-  - We could try addressing this by implementing batched rollouts...
+  - ~~We could try addressing this by implementing batched rollouts...~~
+	  - We have implemented batched rollouts
+		  - [ ] Try running evaluation for with batched rollouts for speedup.
 
 ## Profiling
 
