--- a/2020-08-26t10-04-56z.md
+++ b/2020-08-26t10-04-56z.md
@@ -10,7 +10,7 @@ mind at any given time [@ahrens_how_2017].
 
 We can "hack" our short-term memory by "bundling" things together, i.e.
 grouping related things together so to find them via connections. ( See
-<./2020-08-26t10-09-40z.md> for another way we can "hack" our memory. )
+[Write tasks down to free your Mind](2020-08-26t10-09-40z.md) for another way we can "hack" our memory. )
 
 In a way, this is similar to the notion of _understanding_, where concepts and
 ideas are internally connected in our brain. That's why it is so easy to
