experimental setup for gmg

--- a/2023-07-10t15-06-42z.md
+++ b/2023-07-10t15-06-42z.md
@@ -8,8 +8,8 @@ tags: [msc_thesis]
 For my [thesis](./2023-07-10t14-32-02z.md), we seek to address
 [goal misgeneralization](./2023-07-10t14-38-57z.md) in
 [sequential decision making](./2023-04-11t15-08-41z.md) by focusing on the third
-[possible solution](./2023-07-10t15-08-32z.md) that one may consider: task
-specification.
+[possible solution](./2023-07-10t15-08-32z.md) that one may consider: improving
+task specification.
 
 We focus on this direction because we intuit that most examples of goal
 misgeneralization are due to the limited nature by which tasks are specified. It
