add note for speeding up evaluation using slurm array

--- a/2023-07-13t22-55-21z.md
+++ b/2023-07-13t22-55-21z.md
@@ -33,8 +33,10 @@ and profiling in my [MSc thesis](./2023-07-10t14-32-02z.md). Runtimes are
   takes roughly 5 hours. _With_ rolling trajectories it takes ~36 hours at best
   and _much_ more at worse.
   - ~~We could try addressing this by implementing batched rollouts...~~
-	  - We have implemented batched rollouts
-		  - [ ] Try running evaluation for with batched rollouts for speedup.
+    - We have implemented batched rollouts
+      - [x] Try running evaluation for with batched rollouts for speedup.
+      - it doesn't work
+  - Much smarter: run this with a SLURM array
 
 ## Profiling
 
