trained for 10 epochs

--- a/2023-07-13t17-03-51z.md
+++ b/2023-07-13t17-03-51z.md
@@ -5,9 +5,6 @@ id: 2023-07-13t17-03-51z
 tags: [msc_thesis]
 ---
 
-NOTE: NEED TO UPDATE THIS WITH NINTH CHECKPOINT NOTE: NEED TO TRAIN FOR 10
-EPOCHS AND UPDATE THIS
-
 Having [fully trained](./2023-07-12t13-47-41z.md)
 [CCLIPT](./2023-07-11t11-38-00z.md), and seeing promising results from
 [GCBC evaluations with preliminary versions of CCLIPT](./2023-07-11t11-38-00z.md),
@@ -99,4 +96,30 @@ start state problem does seem to benefit much from additional training.
 
 ## Final checkpoint (10 epochs)
 
-TODO
+![gcbc cclipt sug start last](./images/gcbc_cclipt_full_sug_start_last.png)
+
+|       | Textual Success Rate | Visual Success Rate |
+| ----- | -------------------- | ------------------- |
+| count | 34.000000            | 34.000000           |
+| mean  | 0.333824             | 0.319706            |
+| std   | 0.236502             | 0.210835            |
+| min   | 0.060000             | 0.070000            |
+| 25%   | 0.160000             | 0.142500            |
+| 50%   | 0.255000             | 0.260000            |
+| 75%   | 0.505000             | 0.450000            |
+| max   | 0.910000             | 0.910000            |
+
+![gcbc cclipt non_sug start last](./images/gcbc_cclipt_full_non_sug_start_last.png)
+
+|       | Textual Success Rate | Visual Success Rate |
+| ----- | -------------------- | ------------------- |
+| count | 34.000000            | 34.000000           |
+| mean  | 0.151765             | 0.138529            |
+| std   | 0.227988             | 0.189099            |
+| min   | 0.000000             | 0.000000            |
+| 25%   | 0.002500             | 0.010000            |
+| 50%   | 0.025000             | 0.040000            |
+| 75%   | 0.175000             | 0.187500            |
+| max   | 0.800000             | 0.590000            |
+
+We don't see particular improvements over the previous problems.
