new links; fairer evaluation of gcbc

--- a/2022-10-20t15-42-45z.md
+++ b/2022-10-20t15-42-45z.md
@@ -22,3 +22,5 @@ Here are some differences between the two fields:
   observed data can often depend on the learned strategy.
 - In SL, the observed data are typically [i.i.d](./2021-09-11t13-58-06z.md). In
   RL, the data are sequential, like in [time series](./2020-09-23t15-18-55z.md)
+
+Note: worth mentioning [[Imitation Learning]] and [[Offline RL]].
