--- a/2023-04-11t15-08-41z.md
+++ b/2023-04-11t15-08-41z.md
@@ -8,3 +8,8 @@ tags: [msc_thesis]
 Sequential decision making is the field that studies the processes and
 algorithms necessary for determining the optimal "trajectory" or sequence of
 decisions to make in given environment so to achieve some goal or task.
+
+Often related:
+
+- [Reinforcement Learning](2022-10-20t15-15-55z.md)
+- [[Imitation Learning]]
