add "useful numbers" note; additional links and formatting and canvas adjustments

--- a/2023-07-11t11-38-00z.md
+++ b/2023-07-11t11-38-00z.md
@@ -23,7 +23,7 @@ Instead, we add a MLP head and fine tune that. To mirror what happens with the
 visual encoder, we provide "context" in the form of the current state. So the
 textual trajectory representations are now the MLP combination of the
 representation of the current state and the representation of the text. We refer
-to this as contextualized CLIPT or CCLIPT.
+to this as **contextualized CLIPT** or **CCLIPT**.
 
 After fine-tuning CCLIPT, we find the following performance on GCBC evaluation:
 
