--- a/2023-07-13t22-55-21z.md
+++ b/2023-07-13t22-55-21z.md
@@ -5,9 +5,9 @@ id: 2023-07-13t22-55-21z
 tags: [msc_thesis]
 ---
 
-The following serves as a rough _knowledge dump_ on the runtimes, optimization
-and profiling in my [MSc thesis](./2023-07-10t14-32-02z.md). Runtimes are
-**bolded**
+The following serves as a rough _[[knowledge dump]]_ on the runtimes,
+optimization and profiling in my [MSc thesis](./2023-07-10t14-32-02z.md).
+Runtimes are **bolded**
 
 ## Runtimes and Optimization
 
