add note about necessity of multi-taskedness

--- a/2023-07-17t14-54-03z.md
+++ b/2023-07-17t14-54-03z.md
@@ -93,3 +93,17 @@ variables are simple enough that reward functions can be defined for them.
   unambiguous task specifications.
 - Note, with slightly more effort, we could probably come up with a GMG scenario
   different from CoinRun-style ones.
+
+- Starting to think that our GCBC policy needs to be multi-task, or at least
+  have a multi-task pre-training phase, to encourage the policy to actually
+  "listen" to its conditioning. Otherwise it will just perform behavioural
+  cloning and disregard the conditioning[^1]. In steps 3 onwards, the
+  environment we train has a single task. We may need to adjust this to consist
+  in several tasks, and perhaps keep the coin location fixed throughout. To be
+  able to compare to an RL baseline, we'd train a multi-task policy, where the
+  task to do is specified with a one-hot encoding.
+
+[^1]:
+    I suppose random starting states may serve as "different tasks" to the
+    extent that some conditioning may occur, but I'm not sure the variability is
+    enough to avoid the problem.
