babyai clipt eval notes

--- a/2023-07-17t14-54-03z.md
+++ b/2023-07-17t14-54-03z.md
@@ -22,7 +22,7 @@ That note is missing:
 
 ## Experimental Setup for Goal Misgeneralization
 
-We work with the BabyAI RL environment framework. This framework provides a few
+We work with the [[BabyAI]] RL environment framework. This framework provides a few
 key ingredients:
 
 - **Baby Language**: a combinatorially rich subset of English for expressing
