git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "b89a3b1"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "b89a3b1"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -341,6 +341,21 @@
   keywords = {Complexity theory,Degradation,Image recognition,Image segmentation,Neural networks,Training,Visualization}
 }
 
+@misc{hendrycks_unsolved_2022,
+  title = {Unsolved {{Problems}} in {{ML Safety}}},
+  author = {Hendrycks, Dan and Carlini, Nicholas and Schulman, John and Steinhardt, Jacob},
+  year = {2022},
+  month = jun,
+  number = {arXiv:2109.13916},
+  eprint = {2109.13916},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2109.13916},
+  urldate = {2022-07-28},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,notion,read}
+}
+
 @book{herbert_dune_2005,
   title = {Dune (40th {{Anniversary Edition}})},
   author = {Herbert, Frank},
@@ -501,6 +516,21 @@
   month = aug,
   publisher = {{Veritasium}},
   urldate = {2020-08-28}
+}
+
+@misc{ngo_alignment_2022,
+  title = {The Alignment Problem from a Deep Learning Perspective},
+  author = {Ngo, Richard and Chan, Lawrence and Mindermann, S{\"o}ren},
+  year = {2022},
+  month = dec,
+  number = {arXiv:2209.00626},
+  eprint = {2209.00626},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2209.00626},
+  urldate = {2023-02-23},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Machine Learning,notion,read "internally represented goals",skimmed}
 }
 
 @article{noauthor_jet_2020,
