git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "aa5fd5e"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "aa5fd5e"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -53,6 +53,14 @@
   urldate = {2022-01-04}
 }
 
+@phdthesis{arjovsky_out_2020,
+  title = {Out of {{Distribution Generalization}} in {{Machine Learning}}},
+  author = {Arjovsky, Martin},
+  year = {2020},
+  address = {{USA}},
+  school = {New York University}
+}
+
 @article{bach_promptsource_2022,
   title = {{{PromptSource}}: {{An Integrated Development Environment}} and {{Repository}} for {{Natural Language Prompts}}},
   shorttitle = {{{PromptSource}}},
@@ -156,6 +164,33 @@
   month = sep,
   urldate = {2021-01-18},
   langid = {english}
+}
+
+@misc{critch_tasra_2023,
+  title = {{{TASRA}}: A {{Taxonomy}} and {{Analysis}} of {{Societal-Scale Risks}} from {{AI}}},
+  shorttitle = {{{TASRA}}},
+  author = {Critch, Andrew and Russell, Stuart},
+  year = {2023},
+  month = jun,
+  number = {arXiv:2306.06924},
+  eprint = {2306.06924},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2306.06924},
+  urldate = {2023-08-03},
+  archiveprefix = {arxiv},
+  keywords = {68T01,Computer Science - Artificial Intelligence,Computer Science - Computers and Society,Computer Science - Cryptography and Security,Computer Science - Machine Learning,I.2.0}
+}
+
+@inproceedings{de_haan_causal_2019,
+  title = {Causal {{Confusion}} in {{Imitation Learning}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {{de Haan}, Pim and Jayaraman, Dinesh and Levine, Sergey},
+  year = {2019},
+  volume = {32},
+  publisher = {{Curran Associates, Inc.}},
+  urldate = {2023-02-22},
+  keywords = {notion,seminal causal confusion paper,skimmed,UvA}
 }
 
 @inproceedings{devlin_bert_2019,
@@ -341,6 +376,21 @@
   keywords = {Complexity theory,Degradation,Image recognition,Image segmentation,Neural networks,Training,Visualization}
 }
 
+@misc{hendrycks_overview_2023,
+  title = {An {{Overview}} of {{Catastrophic AI Risks}}},
+  author = {Hendrycks, Dan and Mazeika, Mantas and Woodside, Thomas},
+  year = {2023},
+  month = jul,
+  number = {arXiv:2306.12001},
+  eprint = {2306.12001},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2306.12001},
+  urldate = {2023-08-03},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computers and Society,Computer Science - Machine Learning}
+}
+
 @misc{hendrycks_unsolved_2022,
   title = {Unsolved {{Problems}} in {{ML Safety}}},
   author = {Hendrycks, Dan and Carlini, Nicholas and Schulman, John and Steinhardt, Jacob},
@@ -454,6 +504,20 @@
   year = {2020},
   urldate = {2021-01-19},
   howpublished = {https://www.sloww.co/how-to-get-rich-naval-ravikant/}
+}
+
+@inproceedings{langosco_goal_2022,
+  title = {Goal {{Misgeneralization}} in {{Deep Reinforcement Learning}}},
+  booktitle = {Proceedings of the 39th {{International Conference}} on {{Machine Learning}}},
+  author = {Langosco, Lauro Langosco Di and Koch, Jack and Sharkey, Lee D. and Pfau, Jacob and Krueger, David},
+  year = {2022},
+  month = jun,
+  pages = {12004--12019},
+  publisher = {{PMLR}},
+  issn = {2640-3498},
+  urldate = {2023-02-08},
+  langid = {english},
+  keywords = {notion,read}
 }
 
 @inproceedings{lester_power_2021,
@@ -677,6 +741,22 @@
   keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes}
 }
 
+@misc{shah_goal_2022,
+  title = {Goal {{Misgeneralization}}: {{Why Correct Specifications Aren}}'t {{Enough For Correct Goals}}},
+  shorttitle = {Goal {{Misgeneralization}}},
+  author = {Shah, Rohin and Varma, Vikrant and Kumar, Ramana and Phuong, Mary and Krakovna, Victoria and Uesato, Jonathan and Kenton, Zac},
+  year = {2022},
+  month = nov,
+  number = {arXiv:2210.01790},
+  eprint = {2210.01790},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2210.01790},
+  urldate = {2023-02-07},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Machine Learning,notion,read}
+}
+
 @article{singh_flava_2022,
   title = {{{FLAVA}}: {{A Foundational Language And Vision Alignment Model}}},
   shorttitle = {{{FLAVA}}},
@@ -731,6 +811,23 @@
   pages = {104},
   urldate = {2020-09-03},
   isbn = {9781583811061}
+}
+
+@article{vamplew_scalar_2022,
+  title = {Scalar Reward Is Not Enough: A Response to {{Silver}}, {{Singh}}, {{Precup}} and {{Sutton}} (2021)},
+  shorttitle = {Scalar Reward Is Not Enough},
+  author = {Vamplew, Peter and Smith, Benjamin J. and K{\"a}llstr{\"o}m, Johan and Ramos, Gabriel and R{\u a}dulescu, Roxana and Roijers, Diederik M. and Hayes, Conor F. and Heintz, Fredrik and Mannion, Patrick and Libin, Pieter J. K. and Dazeley, Richard and Foale, Cameron},
+  year = {2022},
+  month = jul,
+  journal = {Autonomous Agents and Multi-Agent Systems},
+  volume = {36},
+  number = {2},
+  pages = {41},
+  issn = {1573-7454},
+  doi = {10.1007/s10458-022-09575-5},
+  urldate = {2022-08-01},
+  langid = {english},
+  keywords = {Artificial general intelligence,Multi-objective decision making,Multi-objective reinforcement learning,notion,read,Reinforcement learning,Safe and ethical AI,Scalar rewards,Vector rewards}
 }
 
 @article{van_merrienboer_tangent_2017,
