--- a/2023-07-10t15-06-42z.md
+++ b/2023-07-10t15-06-42z.md
@@ -5,6 +5,8 @@ id: 2023-07-10t15-06-42z
 tags: [msc_thesis]
 ---
 
+> Note: see also [Thesis Storyline](./2023-08-03t16-35-31z.md)
+
 For my [thesis](./2023-07-10t14-32-02z.md), we seek to address
 [goal misgeneralization](./2023-07-10t14-38-57z.md) in
 [sequential decision making](./2023-04-11t15-08-41z.md) by focusing on the third
