put images in thesis folder

--- a/2023-07-10t17-17-47z.md
+++ b/2023-07-10t17-17-47z.md
@@ -19,9 +19,9 @@ We then check the similarity with textual annotations, and find that this
 similarity is higher for the "realistic" images, indicating that indeed the
 original images were slightly out of distribution
 
-![results](./images/calvin_ood_sanity-check.png)
+![results](calvin_ood_sanity-check.png)
 
 See below for an example before and after.
 
-![before|300](./images/calvin_env_example.png)
-![after|300](./images/calvin_env_realistic.png)
+![before|300](calvin_env_example.png)
+![after|300](calvin_env_realistic.png)
