--- a/2023-07-10t17-40-11z.md
+++ b/2023-07-10t17-40-11z.md
@@ -14,4 +14,4 @@ visualizing the similarity matrices between language annotations and goal
 images, trying a number of different prompts too. Ultimately, none of the
 matrices show a nice diagonal as desired.
 
-![](./images/calvin_single-image-check.png)
+![](calvin_single-image-check.png)
