--- a/2023-07-10t18-29-00z.md
+++ b/2023-07-10t18-29-00z.md
@@ -17,7 +17,7 @@ To intrinsically evaluate the quality of the embeddings produced by
 - Plot the distribution of similarities within and across modalities, to check
   that these are somewhat aligned.
 
-![similarity matrices](./images/clipt-eval-256.pdf)
+![similarity matrices](clipt-eval-256.pdf)
 
 Example top-k accuracy for CLIPT
 
@@ -31,4 +31,4 @@ Accuracy@20: 0.828
 Accuracy@50: 0.953
 ```
 
-![similarity_distributions](./images/similarity-hists-256.pdf)
+![similarity_distributions](similarity-hists-256.pdf)
