--- a/2023-07-10t18-45-27z.md
+++ b/2023-07-10t18-45-27z.md
@@ -18,11 +18,11 @@ visual and textual** trajectory representations.
 We find the performance gap here to be promising, suggesting that our CLIPT
 embeddings are of relatively high quality for what we want to do.
 
-![training curves](./images/task-classifier_curves.png)
+![training curves](task-classifier_curves.png)
 
 Surprisingly, the textual trajectories perform better on the test set:
 
-![test set performance](./images/task-classifier_test.png)
+![test set performance](task-classifier_test.png)
 
 One possible explanation is that the frames and/or trajectories in the test set
 are somewhat out of distribution compared to those in the train split, while the
