--- a/2023-07-11t10-48-13z.md
+++ b/2023-07-11t10-48-13z.md
@@ -18,4 +18,4 @@ validation we use textual trajectory representations.
 Below are the curves for the first ~20 hours of training. One epoch takes
 roughly 4 hours, and we validate twice per epoch.
 
-![gcbc curves](./images/gcbc_curves.png)
+![gcbc curves](gcbc_curves.png)
