--- a/2023-07-11t11-24-40z.md
+++ b/2023-07-11t11-24-40z.md
@@ -10,7 +10,7 @@ the lowest validation loss (which is actually
 [somewhat early in training](./2023-07-11t10-48-13z.md)) we get the following
 results:
 
-![gcbc lowest val loss eval](./images/gcbc_low_val_loss_eval.png)
+![gcbc lowest val loss eval](gcbc_low_val_loss_eval.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
