--- a/2023-07-11t11-29-58z.md
+++ b/2023-07-11t11-29-58z.md
@@ -12,7 +12,7 @@ occurs quite early on in training, and the
 
 Taking the checkpoint from the end of training gives the following results:
 
-![gcbc latest checkpoint](./images/gcbc_latest_ckpt_eval.png)
+![gcbc latest checkpoint](gcbc_latest_ckpt_eval.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
