--- a/2023-07-11t11-38-00z.md
+++ b/2023-07-11t11-38-00z.md
@@ -27,7 +27,7 @@ to this as **contextualized CLIPT** or **CCLIPT**.
 
 After fine-tuning CCLIPT, we find the following performance on GCBC evaluation:
 
-![GCBC eval with CCLIPT](./images/cclipt_gcbc_eval.png)
+![GCBC eval with CCLIPT](cclipt_gcbc_eval.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
