--- a/2023-07-11t12-12-49z.md
+++ b/2023-07-11t12-12-49z.md
@@ -17,7 +17,7 @@ Concerned that performance may therefore be in part due to start state
 memorization, we perform evaluation again with random start-states and obtain
 the following results:
 
-![non suggestive start states](./images/gcbc_non_suggestive_eval.png)
+![non suggestive start states](gcbc_non_suggestive_eval.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
