--- a/2023-07-11t12-32-21z.md
+++ b/2023-07-11t12-32-21z.md
@@ -29,7 +29,7 @@ Below, we report the results of this investigation
 Without the ablation (i.e. without removing the second half of the encoder
 inputs (setting that half to 0)), we obtain the following results:
 
-![cclipt no ablation](./images/cclipt_no_ablation.pdf)
+![cclipt no ablation](cclipt_no_ablation.pdf)
 
 ```plaintext
 Accuracy@1: 0.238
@@ -42,7 +42,7 @@ Accuracy@50: 0.973
 
 With the ablation, we obtain the following results
 
-![cclipt with ablation](./images/cclipt_ablation.pdf)
+![cclipt with ablation](cclipt_ablation.pdf)
 
 ```plaintext
 Accuracy@1: 0.016
