--- a/2023-07-12t13-29-12z.md
+++ b/2023-07-12t13-29-12z.md
@@ -20,7 +20,7 @@ is wrong: CCLIPT is learning to just ignore the second half of the inputs.
 
 Before the ablation
 
-![full cclipt eval](./images/full_cclipt_eval.pdf)
+![full cclipt eval](full_cclipt_eval.pdf)
 
 ```plaintext
 Accuracy@1: 1.000
@@ -33,7 +33,7 @@ Accuracy@50: 1.000
 
 After the ablation
 
-![full cclipt eval ablated](./images/full_cclipt_eval_ablated.pdf)
+![full cclipt eval ablated](full_cclipt_eval_ablated.pdf)
 
 ```plaintext
 Accuracy@1: 0.000
