--- a/2023-07-12t13-47-41z.md
+++ b/2023-07-12t13-47-41z.md
@@ -14,4 +14,4 @@ Previous experiments relied on checkpoints trained for 50 epochs, in less than
 decide to train CCLIPT from scratch, training for a full hour, for a total of
 almost 1000 epochs. Our curves ultimately plateau
 
-![cclipt training curves](./images/cclipt_training_curves.png)
+![cclipt training curves](cclipt_training_curves.png)
