--- a/2023-07-13t17-03-51z.md
+++ b/2023-07-13t17-03-51z.md
@@ -20,7 +20,7 @@ various checkpoints:
 
 ## Third checkpoint (1.5 epochs)
 
-![gcbc_cclipt_sug_start](./images/gcbc_cclipt_full_sug_start_third.png)
+![gcbc_cclipt_sug_start](gcbc_cclipt_full_sug_start_third.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
@@ -35,7 +35,7 @@ various checkpoints:
 
 And without suggestive start states
 
-![gcbc cclipt non sug start](./images/gcbc_cclipt_full_non_sug_start_third.png)
+![gcbc cclipt non sug start](gcbc_cclipt_full_non_sug_start_third.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
@@ -65,7 +65,7 @@ that the tasks are actually harder.
 
 ## Ninth checkpoint (4.5 epochs)
 
-![gcbc_cclipt_sug_start ninth](./images/gcbc_cclipt_full_sug_start_ninth.png)
+![gcbc_cclipt_sug_start ninth](gcbc_cclipt_full_sug_start_ninth.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
@@ -78,7 +78,7 @@ that the tasks are actually harder.
 | 75%   | 0.455000             | 0.470000            |
 | max   | 0.890000             | 0.870000            |
 
-![gcbc cclipt non sug start ninth](./images/gcbc_cclipt_full_non_sug_start_ninth.png)
+![gcbc cclipt non sug start ninth](gcbc_cclipt_full_non_sug_start_ninth.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
@@ -96,7 +96,7 @@ start state problem does seem to benefit much from additional training.
 
 ## Final checkpoint (10 epochs)
 
-![gcbc cclipt sug start last](./images/gcbc_cclipt_full_sug_start_last.png)
+![gcbc cclipt sug start last](gcbc_cclipt_full_sug_start_last.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
@@ -109,7 +109,7 @@ start state problem does seem to benefit much from additional training.
 | 75%   | 0.505000             | 0.450000            |
 | max   | 0.910000             | 0.910000            |
 
-![gcbc cclipt non_sug start last](./images/gcbc_cclipt_full_non_sug_start_last.png)
+![gcbc cclipt non_sug start last](gcbc_cclipt_full_non_sug_start_last.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
