--- a/2023-07-17t12-26-43z.md
+++ b/2023-07-17t12-26-43z.md
@@ -9,7 +9,7 @@ tags: [msc_thesis]
 
 With suggestive start states:
 
-![gcbc cclipt non sug start ninth](./images/gcbc_rolling_sug_start_second.png)
+![gcbc cclipt non sug start ninth](gcbc_rolling_sug_start_second.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
@@ -24,7 +24,7 @@ With suggestive start states:
 
 And without suggestive start states:
 
-![gcbc cclipt non sug start ninth](./images/gcbc_rolling_non_sug_start_second.png)
+![gcbc cclipt non sug start ninth](gcbc_rolling_non_sug_start_second.png)
 
 |       | Textual Success Rate | Visual Success Rate |
 | ----- | -------------------- | ------------------- |
