--- a/2023-07-17t14-54-03z.md
+++ b/2023-07-17t14-54-03z.md
@@ -83,6 +83,7 @@ confounding variable to increase while a reward function capturing the
 completion of the desired variable does not. Under this toy environment, both
 variables are simple enough that reward functions can be defined for them.
 
+(We are working in terms of success rate, not rewards.)
 ## Additional Considerations
 
 - I'm most uncertain about the baseline we compare to (step 5)
