--- a/2023-07-31t12-14-08z.md
+++ b/2023-07-31t12-14-08z.md
@@ -25,7 +25,7 @@ Accuracy@50: 0.938
 
 ## CCLIPT-2P
 
-![babyai cclipt-2p eval](./images/babyai_cclipt_eval.pdf)
+![babyai cclipt-2p eval](babyai_cclipt_eval.pdf)
 
 ```plaintext
 Accuracy@1: 0.461
