--- a/2023-08-03t17-11-46z.md
+++ b/2023-08-03t17-11-46z.md
@@ -18,7 +18,7 @@ GCBC is indeed ignoring the trajectory conditioning and just performing vanilla
 behavioural cloning, then we should not observe any drop in performance between
 the ablation and the standard setting.
 
-![gcbc random traj ablation](./images/gcbc_random_trajs_eval.png)
+![gcbc random traj ablation](gcbc_random_trajs_eval.png)
 
 |       | Normal Success Rate | Random Success Rate |
 | ----- | ------------------- | ------------------- |
